<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundFon"
    tools:context=".VhodFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_height="match_parent">

        <ImageButton
        android:id="@+id/vhod_image_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="68dp"
        android:background="@android:color/transparent"
        style="@style/BackLeftOutline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/vhod_salem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center_vertical"
            android:text="@string/vhod_salem"
            style="@style/OsnovnoiText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vhod_image_button" />

        <TextView
            android:id="@+id/kiriniz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/vhod_akk_kiru"
            style="@style/DescriptionOnbarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vhod_salem" />

        <TextView
            android:id="@+id/vhod_emaill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="Email"
            style="@style/OsnovnoiText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kiriniz" />

        <LinearLayout
            android:id="@+id/vhod_linear_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            style="@style/ShapeVhod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vhod_emaill"
            tools:ignore="InvalidId">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/vhod_message" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:background="#00FFFFFF"
                android:ems="15"
                android:hint="@string/vhod_emaill_tint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                style="@style/OsnovnoiText"
                android:textColorHint="#9CA3AF"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/vhod_text_skriti_oshibka"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textColor="#FF402B"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/vhod_linear_email"
            />

        <TextView
            android:id="@+id/vhod_text_parol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/vhod_password_text"
            style="@style/OsnovnoiText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vhod_text_skriti_oshibka"
            tools:ignore="UnknownId" />

        <LinearLayout
            android:id="@+id/vhod_linear_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            style="@style/ShapeVhod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vhod_text_parol"
            tools:ignore="InvalidId">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/vhod_password" />

            <EditText
                android:id="@+id/vhod_edit_password"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:background="#00FFFFFF"
                android:ems="14"
                android:hint="@string/vhod_password_tint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                style="@style/OsnovnoiText"
                android:textColorHint="#9CA3AF"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/vhod_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/vhod_show"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/vhod_text_zabil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="end"
            android:text="@string/vhod_vos_password"
            android:textColor="#B376F7"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vhod_linear_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/vhod_text_zabil"
            android:layout_marginTop="40dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/vhod_button_kiru"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/shape_button_nove"
                android:text="@string/vhod_button_kiru"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="@font/sf_pro_display_semibold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    style="@style/DescriptionVhod"
                    android:text="@string/vhod_vopros_regis"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/vhod_text_regestracia_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/vhod_regis_button"
                    android:textColor="#B376F7"
                    android:gravity="start"
                    tools:ignore="InvalidId" />

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>