<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    style="@style/BackgroundFon"
    android:layout_height="match_parent"
    tools:context=".ViewPager.Onboarding8Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutOnbarding10"
        android:layout_width="match_parent"
        android:layout_height="504dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:scaleType="centerCrop"
            android:src="@drawable/onbarding10"
            android:contentDescription="Image"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="239dp"
            style="@style/ViewOnbarding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/onbarding10TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onbarding_glav_text"
        android:textSize="24sp"
        style="@style/OsnovnoiText"
        android:fontFamily="@font/sf_pro_display_bold"
        app:layout_constraintTop_toBottomOf="@id/ConstraintLayoutOnbarding10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="#6B7280"
        android:gravity="center"
        style="@style/DescriptionOnbarding"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginHorizontal="60dp"
        android:text="@string/onbarding10_description"
        app:layout_constraintTop_toBottomOf="@id/onbarding10TextView"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_onboarding10"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="48dp"
        android:text="@string/onbarding10_button"
        android:textSize="13sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:background="@drawable/shape_button_nove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />




</androidx.constraintlayout.widget.ConstraintLayout>