<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundFon"
    tools:context=".SearchFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_main_linear"
        android:layout_width="match_parent"
        android:layout_marginTop="44dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/profile_text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/search_glav_text"
            style="@style/OsnovnoiText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profile_exit_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="#00FFFFFF"
            style="@style/BackLeftOutline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_text_profile"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9CA3AF"
        app:layout_constraintTop_toBottomOf="@id/profile_main_linear" />

    <LinearLayout
        android:id="@+id/search_search_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">


        <LinearLayout
            android:layout_width="255dp"
            android:background="@drawable/shape_vhod"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:inputType="text"
                style="@style/ShapeVhod"
                android:textColor="#111827"
                android:hint="@string/search_glav_text"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:textColorHint="#9CA3AF"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_width="56dp"
            android:gravity="center"
            style="@style/SearchButton"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/search_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SearchFavorite" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sanattar"
        android:layout_width="0dp"
        android:layout_height="289dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/search_search_button"
        app:layout_constraintStart_toStartOf="@+id/search_search_button"
        app:layout_constraintTop_toBottomOf="@id/search_search_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/search_sanattar_text"
            style="@style/OsnovnoiText"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="145dp"
                android:layout_height="34dp"
                style="@style/SearchButton"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:text="@string/home_trend_textGlav"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                style="@style/SearchButton"
                android:layout_width="105dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:text="@string/home_sizge_textGlav"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="95dp"
                android:layout_height="34dp"
                android:layout_marginTop="16dp"
                style="@style/SearchButton"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:text="@string/search_sitkom"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7" />

            <TextView
                android:id="@+id/texotview12"
                android:layout_width="124dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                style="@style/SearchButton"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:text="@string/search_multserial"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/textView10"
                app:layout_constraintTop_toTopOf="@id/textView10" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="200dp"
                android:layout_height="34dp"
                android:layout_marginTop="16dp"
                style="@style/SearchButton"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:text="@string/home_reality_text"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView10" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_cons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/search_search_button"
        app:layout_constraintStart_toStartOf="@+id/search_search_button"
        app:layout_constraintTop_toBottomOf="@+id/search_search_button" >

        <TextView
            android:id="@+id/textView19"
            style="@style/OsnovnoiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="Іздеу нәтижелері"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RcView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>